<resources>
    <string name="app_name">Hotdog</string>
    <string name="hotdog_ketchup">Hot-dog with ketchup</string>
    <string name="hotdog_mustard">Hot-dog with mustard</string>
    <string name="hotdog_mayo">Hot-dog with mayo</string>
    <string name="order_hotdogs">Order Hot-dogs</string>
    <string name="one_hotdog">One hot-dog</string>
    <string name="six_hotdogs">Six Hot-dogs</string>
    <string name="twelve_hotdogs">Twelve Hot-dogs</string>
    <string name="choose_flavor">Choose Flavor</string>
    <string name="mustard">Mustard</string>
    <string name="ketchup">Ketchup</string>
    <string name="mayo">Mayo</string>
    <string name="special_flavor">Special Flavor</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="flavor">Flavor</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_hotdog_order">New Hot-dog Order</string>
    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \n
        Total: %4$s \n\n Thank you!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>