<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StartFragment">
    <!--сделала разметку как у гугл, и больше нет constraints, почему?-->

    <!--data>
        <variable
            name="startFragment"
            type="ru.alexkubrick.hotdog.StartFragment" />
    </data-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/hotdogmustard" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/order_hotdogs"
                android:textAppearance="?attr/textAppearanceHeadline3"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/order_one_hotdog"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:minWidth="250dp"
                android:text="@string/one_hotdog"
                app:backgroundTint="@color/red_pink" />

            <Button
                android:id="@+id/order_six_hotdog"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:minWidth="250dp"
                android:text="@string/six_hotdogs"
                app:backgroundTint="@color/red_pink" /> <!--хотела через стили, но пришлось вручную на каждую кнопку цвет писать-->

            <Button
                android:id="@+id/order_twelve_hotdog"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:minWidth="250dp"
                android:text="@string/twelve_hotdogs"
                app:backgroundTint="@color/red_pink" />

        </LinearLayout>
    </ScrollView>
</layout>